--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,10 @@ dependencies:
   firebase_auth: ^4.17.0
   path_provider: ^2.1.2
   cloud_firestore: ^4.17.5
+  http: ^1.1.0
+  shared_preferences: ^2.2.2
+  intl: ^0.18.0
+  jwt_decoder: ^2.0.1
 
 dev_dependencies:
   flutter_test:
