--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   jwt_decoder: ^2.0.1
   geolocator: ^10.1.0
   url_launcher: ^6.2.4
+  shimmer: ^3.0.0
 
 dev_dependencies:
   flutter_test:
